applications/tenants/shared/overlays/production/wordpress/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
  namespace: ${tenant}-wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wordpress.${domain}`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
  tls:
    secretName: wildcard.${domain}.tls
